# pyinstabot-downloader

./: .flake8  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Pipfile  README.md  SECURITY.md  bot.py  docker-compose.dev..yml  docker-compose.dev.yml  docker-compose.prerelease.yml  docker-compose.prod.yml  docker-compose.release.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  pr.yaml  release.yaml  release.yml  tag.yaml  tests.yml  workflow.yaml  workflow.yml
doc/: pyinstabot-downlaoder.drawio  pyinstabot-downloader.drawio  queue_thread.drawio
scripts/: psql-init.sh  vault-init.sh
src/: bot.py  constants.py  dropbox.py  instagram.py  progressbar.py
src/configs/: constants.py  databases.json  messages.json  settings.py
src/extensions/: downloader.py  dropbox.py  instagram.py  progressbar.py  uploader.py
src/migrations/: 0001_vault_data.py  0001_vault_historical_data.py  0002_messages_table.py  0002_update_messages_table.py  0003_users_table.py  0004_vault_users_data.py
src/modules/: .deprecated.py  database.py  downloader.py  exceptions.py  metrics.py  tools.py  uploader.py
src/tools/: downloader.py  uploader.py
tests/: README.md  conftest.py  test_bot.py  test_database.py  test_init.py  test_metrics.py
tests/postgres/: tables.sql
tests/vault/: policy.hcl
vault/: policy.dev.hcl  policy.hcl  policy.release.hcl
