[tool.poetry]
name = "pyinstabot-downloader"
version = "2.3.0"
description = "This project is a Telegram bot that allows you to upload posts from your Instagram profile to clouds like Dropbox, Mega or any WebDav compatible cloud storage."
authors = ["Bervinov Oleg <obervinov@pm.me>"]
maintainers = ["Bervinov Oleg <obervinov@pm.me>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/obervinov/pyinstabot-downloader"
repository = "https://github.com/obervinov/pyinstabot-downloader"
documentation = "https://github.com/obervinov/pyinstabot-downloader/blob/main/README.md"
keywords = ["telegram", "bot", "telebot", "telegram-bot", "instagram", "meganz", "dropbox", "webdav", "backup", "pyinstabot", "pyinstabot-downloader"]
include = ["CHANGELOG.md"]
packages = [{include = "src"}]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/obervinov/pyinstabot-downloader/issues"

[tool.poetry.dependencies]
python = "^3.9"
instaloader = "^4"
dropbox = "^12"
'mega.py' = "^1.0.8"
psycopg2-binary = "^2"
mock = "^5"
webdavclient3 = "^3"
prometheus-client = "^0"
logger = { git = "https://github.com/obervinov/logger-package.git", tag = "v1.0.6" }
vault  = { git = "https://github.com/obervinov/vault-package.git", tag = "v3.0.0" }
users = { git = "https://github.com/obervinov/users-package.git", tag = "v3.0.0" }
telegram = { git = "https://github.com/obervinov/telegram-package.git", tag = "v2.0.1" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
