[tool.poetry]
name = "pyinstabot-downloader"
version = "3.3.3"
description = "This project is a Telegram bot that allows you to upload posts from your Instagram profile to clouds like any WebDav compatible cloud storage."
authors = ["Bervinov Oleg <bervinov.ob@gmail.com>"]
maintainers = ["Bervinov Oleg <bervinov.ob@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/obervinov/pyinstabot-downloader"
repository = "https://github.com/obervinov/pyinstabot-downloader"
documentation = "https://github.com/obervinov/pyinstabot-downloader/blob/main/README.md"
keywords = ["telegram", "bot", "telebot", "telegram-bot", "instagram", "webdav", "backup", "pyinstabot", "pyinstabot-downloader"]
include = ["CHANGELOG.md"]
packages = [{include = "src"}]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/obervinov/pyinstabot-downloader/issues"

[tool.poetry.dependencies]
python = "^3.12"
instagrapi = "^2"
pillow = "^11"
psycopg2-binary = "^2"
mock = "^5"
webdavclient3 = "^3"
prometheus-client = "^0"
logger = { git = "https://github.com/obervinov/logger-package.git", tag = "v2.0.0" }
vault  = { git = "https://github.com/obervinov/vault-package.git", tag = "v4.0.0" }
users = { git = "https://github.com/obervinov/users-package.git", tag = "v4.0.2" }
telegram = { git = "https://github.com/obervinov/telegram-package.git", tag = "v3.0.0" }

[tool.poetry.group.dev.dependencies]
pylint = "^3"
flake8 = "^7"
pytest = "^8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
